<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/mName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/green_button_h"
            android:hint="@string/name"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/mEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edt_margin"
            android:hint="@string/email"
            android:paddingLeft="20dp"

            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/mPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edt_margin"
            android:hint="@string/password"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            android:password="true"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <ImageView
            android:id="@+id/mFbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/green_button_h"
            android:src="@drawable/sign_up_btn" />


    </LinearLayout>

    <ImageView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/green_button_h"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/edt_margin"
        android:background="@color/greenbtn"
        android:src="@drawable/go_btn" />


</RelativeLayout>
